@@ -1,3 +1,15 @@
+2009-11-20  Jon Honeycutt  <jhoneycutt@apple.com>
+
+        DOMNode::childNodes() is unimplemented
+
+        https://bugs.webkit.org/show_bug.cgi?id=31745
+
+        Reviewed by Darin Adler.
+
+        * DOMCoreClasses.cpp:
+        (DOMNode::childNodes):
+        Create a DOMNodeList from the node's child nodes.
+
 2009-11-20  Dave Hyatt  <hyatt@apple.com>
 
         Reviewed by Jon Honeycutt.
